<resources>
    <string name="app_name">QR-GenScan</string>
    <string name="title_scan">Сканирование</string>
    <string name="title_generation">Генерация</string>
    <string name="title_settings">Настройки</string>
    <string name="toolbar_settings">Настройки</string>
    <string name="toolbar_generation">Создание кодов</string>
    <string name="sound">Звук</string>
    <string name="vibr">Вибрация</string>
    <string name="history">История сканирования</string>
    <string name="about">О приложении</string>
    <string name="confid">Условия пользования</string>
    <string name="about_info">Приложение для сканирования и генерации QR и Bar кодов\n\nРазработчик Марьин П.Е.\nТекущая версия: 1.0.0.</string>
    <string name="terms">terms</string>
    <string name="scanned">Scanned</string>
    <string name="terms_text">Сфера применения, ответственное лицо, правовая основа и период хранения\n
    \nСфера действия Политики конфиденциальности
    \nОбъем обработки данных
    \nМы собираем и используем личную информацию наших пользователей в той мере, в какой это необходимо для предоставления высококачественных приложений и выполнения наших услуг, включая отображение информации о продукте и ценах, связанной с отсканированными штрих-кодами.
    В случае, если мы делаем наши услуги бесплатными, мы финансируем наши услуги с помощью персонализированной рекламы.
    Правовая основа
    \nПри обработке персональных данных, необходимых для выполнения договора с пользователем, пункт (b) пункта 1 статьи 6 Общего регламента по защите данных служит правовой основой.
    Если обработка необходима для учета законных интересов нашей компании или третьей стороны и если эти интересы не отменяются интересами пользователя, правовая основа предоставляется в пункте (f) пункта 1 статьи 6 Общего регламента по защите данных.
    Период удержания
    Личные данные пользователя будут удалены, как только будет достигнута основная цель сбора.Информация о периоде хранения предоставляется индивидуально для каждой операции обработки данных.
    \nКонтакт по электронной почте
   \nSteam_for_akk@mail.ru
    \nПользователи могут отправлять нам электронное письмо либо напрямую, либо используя формы в приложениях. Персональные данные, передаваемые по электронной почте, будут храниться. В этом контексте данные не будут раскрываться третьим лицам. Данные используются
    </string>
    <string name="resultat">Результат:</string>
    <string name="null_text">null</string>
    <string name="back_to_settings">Настройки</string>
    <string name="historyscanned">HistoryScanned</string>
    <string name="generation_title">Генерация кодов</string>
    <string name="btn_generate">Создать код</string>
    <string name="generatecode">GenerateCode</string>
    <string name="cardfragment">CardFragment</string>
</resources>