<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scan">

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_generate"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_generation"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_terms"
        android:name="com.example.myapplication.ui.notifications.TermsFragment"
        android:label="@string/terms"
        tools:layout="@layout/dialog_layout_terms" />

    <fragment
        android:id="@+id/navigation_scanned"
        android:name="com.example.myapplication.ui.home.ScannedFragment"
        android:label="@string/scanned"
        tools:layout="@layout/scanned_layout" />
</navigation>